tests/requests/snapshots/can_post_home_form@home_request.snap
---
source: tests/requests/home.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"name\":\"Daniel\",\"age\":99,\"parsed_from\":\"Form\"}",
)
